# pyproject-boilerplate

./: .gitignore  README.md  cookiecutter.json  pyproject.toml  tox.ini
hooks/: post_gen_project.py
tests/: test_bake_project.py
{{ cookiecutter.project_slug }}/: .isort.cfg  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}/: __main__.py
{{ cookiecutter.project_slug }}/tests/: test_{{ cookiecutter.project_slug }}.py
