[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "{{ cookiecutter.version }}"
description = ""
authors = ["{{ cookiecutter.full_name.replace('\"', '\\\"') }} <{{ cookiecutter.email }}>"]
license = "{{ cookiecutter.open_source_license }}"
packages = [
    { include = "{{ cookiecutter.project_slug }}", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
tox = "^3.24.4"
towncrier = "^21.3.0"
black = "^21.9b0"
docformatter = "^1.4"
mypy = "^0.910"
isort = "^5.9.3"
pytest = "^6.2.5"
pre-commit = "^2.15.0"

[tool.black]
line-length = 80
py36 = true
skip-string-normalization = true
skip-numeric-underscore-normalization = true

[tool.towncrier]
package = "{{ cookiecutter.project_slug }}"
filename = "CHANGELOG.md"
directory = "news"
issue_format = "[#{issue}](https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}/issues/{issue})"
title_format = "## {version} ({project_date})"
start_string = "<!-- TOWNCRIER -->\n"
underlines = ["", "", ""]
template = "news/TEMPLATE"

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bugfixes"
showcontent = true

[[tool.towncrier.type]]
directory = "dev"
name = "Development Changes"
showcontent = true

[[tool.towncrier.type]]
directory = "docs"
name = "Improved Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "feature"
name = "Features"
showcontent = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
